# jcld3

./: .gitignore  .gitmodules  README.md  pom.xml
com/github/davidecaroselli/jcld3/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
com/github/davidecaroselli/jcld3/1.0/: jcld3-1.0.jar.md5  jcld3-1.0.jar.sha1  jcld3-1.0.pom.md5  jcld3-1.0.pom.sha1
docker/: Dockerfile
src/main/java/com/github/davidecaroselli/jcld3/: CLD3.java  LanguageRegistry.java  LanguageResult.java  UTF8Charset.java  XLanguageResult.java
src/main/java/com/github/davidecaroselli/jcld3/utils/: FileUtils.java  NativeUtils.java
src/main/java/it/davidecaroselli/jcld3/: CLD3.java  LanguageRegistry.java  LanguageResult.java  UTF8Charset.java  XLanguageResult.java
src/main/java/it/davidecaroselli/jcld3/utils/: FileUtils.java  NativeUtils.java
src/main/native/: CMakeLists.txt  LanguageRegistry.cpp  LanguageRegistry.h  com_github_davidecaroselli_jcld3_CLD3.cpp  it_davidecaroselli_jcld3_CLD3.cpp  jniutils.h
src/main/native/javah/: com_github_davidecaroselli_jcld3_CLD3.h  it_davidecaroselli_jcld3_CLD3.h
src/test/java/com/github/davidecaroselli/jcld3/: CLD3Test.java
src/test/java/it/davidecaroselli/jcld3/: CLD3Test.java
